06-100. Styling NextJS Project: Your Options & Using CSS Modules: add main-header.module.css

--- a/app/globals.css
+++ b/app/globals.css
@@ -18,10 +18,11 @@ h1 {
   text-align: center;
 }
 
-p {
+/* p,
+p a {
   color: lightblue;
   text-align: center;
-}
+} */
 
 .header-background {
   position: absolute;
